style: uniformed text item color in combobox with white, main: right layout: frames occupy all vertical space if it's the only one open

--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -74,7 +74,13 @@ QComboBox::drop-down {
     border: none;
     background-color: #505050;
     width: 5px;
+    color: white;
 }
+
+QComboBox QAbstractItemView {
+    color: white;
+}
+
 
 QComboBox:hover, QComboBox::hover, QComboBox::down-arrow:hover {
     opacity: 0.8;
